[TUNE] Enabled experimental cgroups in JVM (preventing eager mem allocation)