@@ -1,3 +1,7 @@
 #!/bin/sh
 echo "-> Starting Eureka service (service discovery)"
-java -Djava.security.egd=file:/dev/./urandom -jar /usr/local/eureka-service/@springBootJar@
+java    -XX:+PrintFlagsFinal \
+        -XX:+UnlockExperimentalVMOptions \
+        -XX:+UseCGroupMemoryLimitForHeap \
+        -Djava.security.egd=file:/dev/./urandom \
+        -jar /usr/local/eureka-service/@springBootJar@
